# Compile-2-RNN

./: README.md  main.ipynb  main2.ipynb
simple_rnn/: .gitignore  Cargo.toml
simple_rnn/src/: compile.rs  main  main.rs  matrix.rs  other.rs  util.rs
simple_rnn/tests/: compile.rs
