[package]
name = "simple_rnn"
version = "0.1.0"
authors = ["asvarga <thealexvarga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.24.0"
egg = "0.6.0"
# inline-python = "0.6.0"

[dev-dependencies]
env_logger = {version = "0.7", default-features = false}
